# DCTBM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DCTBM  DartConfiguration.tcl  Makefile  cmake_install.cmake  main.cpp  token_github.txt
inc/: MultiCardCPP.h
lib/: MultiCard.lib
src/: main.cpp
